@@ -4,7 +4,8 @@
 # (c)2002 Dan Potter
 #
 
-OBJS =  net_core.o net_arp.o net_input.o net_icmp.o net_ipv4.o net_udp.o net_dhcp.o
+OBJS  = net_core.o net_arp.o net_input.o net_icmp.o net_ipv4.o net_udp.o 
+OBJS += net_dhcp.o net_ipv4_frag.o
 SUBDIRS = 
 
 include $(KOS_BASE)/Makefile.prefab
