@@ -50,4 +50,8 @@ int net_ipv4_send(netif_t *net, const uint8 *data, int size, int id, int ttl,
                   int proto, uint32 src, uint32 dst);
 int net_ipv4_input(netif_t *src, const uint8 *pkt, int pktsize);
 
+/* In net_ipv4_frag.c */
+int net_ipv4_frag_send(netif_t *net, ip_hdr_t *hdr, const uint8 *data,
+                       int size);
+
 #endif /* __LOCAL_NET_IPV4_H */
